<resources>
    <string name="app_name">Secure SMS</string>

    <string name="action_settings">Settings</string>
    <string name="type_message_hint">Typing message here</string>
    <string name="action_add">New message</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="search_hint">Typing contact name or phone number</string>
    <string name="choose_phone_number">Choose phone number of %s</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="add_contact">Add to contact</string>
    <string name="forward">Forward</string>
    <string name="message_options">Message options</string>
    <string name="recent_list">Recent list</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_fail">Delete failure</string>
    <string name="delete_all_messages">Delete all %s\'s messages</string>
    <string name="no_result">No resuls were found</string>
    <string name="new_sms_to">New message to %s</string>
    <string name="no_recent_conversation">No recent conversations</string>
    <string name="version">Version 1.1</string>
    <string name="send_failed">Send failed</string>
    <string name="change_passphrase">Change passphrase</string>
    <string name="title_activity_change_passphrase">ChangePassphraseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="change_passphrase_warning">After changing the passphrase, all new messages you sent to this address will be encrypted with the new password. Make sure that the recipient has the same password to decrypt</string>
    <string name="current_passphrase">Current passphrase</string>
    <string name="new_passphrase">New passphrase</string>
    <string name="retype_new_passphrase">Retyping new passphrase</string>
    <string name="field_can_not_null">Fields can not be null</string>
    <string name="passphrase_not_match">These passphrases don\'t match</string>
    <string name="update_passphrase_success">Update passphrase successfully</string>
    <string name="update_passphrase_failure">Update passphrase failure</string>
    <string name="current_passphrase_incorrect">Current passphrase incorrect</string>
    <string name="processing">Processing</string>
</resources>
