<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.anhtn.securesms.app.SmsMessageActivity">

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_call"
        android:title="@string/call"
        android:icon="@drawable/phone"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_contact"
        android:title="@string/add_contact"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
