<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.thanthoai.securesms.app.ChangeAesPassActivity">

    <fragment
        android:id="@+id/fragment_done_cancel"
        android:tag="done_cancel"
        android:name="org.thanthoai.securesms.fragments.DoneCancelBarFragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/gg_grey300"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/app_icon"
                    android:contentDescription="@null"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_marginBottom="?attr/actionBarSize"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <EditText
                    style="@style/edit_change_passphrase"
                    android:hint="@string/current_passphrase"
                    android:inputType="textPassword"
                    android:id="@+id/edit1" />

                <EditText
                    style="@style/edit_change_passphrase"
                    android:hint="@string/new_passphrase"
                    android:inputType="textPassword"
                    android:id="@+id/edit2" />

                <EditText
                    style="@style/edit_change_passphrase"
                    android:hint="@string/retype_new_passphrase"
                    android:inputType="textPassword"
                    android:id="@+id/edit3" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
